# concordium-java-sdk

./: .gitignore  .gitmodules  .project  CHANGELOG.md  Makefile  README.md  RELEASE.md  id_romilstactrace  id_romilstactrace.pub  pom.xml
.github/: deploy-android.yml
.github/workflows/: build-test.yml  deploy-android.yml  release.yml
concordium-android-sdk/: .gitignore  AndroidManifest.xml  pom.xml
concordium-android-sdk-examples/: README.md  settings.gradle.kts
concordium-android-sdk-examples/app/: build.gradle.kts
concordium-android-sdk-examples/app/src/main/: AndroidManifest.xml
concordium-android-sdk-examples/gradle/wrapper/: gradle-wrapper.properties
concordium-android-sdk/src/main/: AndroidManifest.xml
concordium-android-wallet-example/: .gitignore  README.md  settings.gradle.kts
concordium-android-wallet-example/app/: build.gradle.kts
concordium-android-wallet-example/app/src/main/: AndroidManifest.xml
concordium-sdk/: .gitignore  pom.xml
concordium-sdk-examples/: .gitignore  README.md  pom.xml
concordium-sdk/src/test/testresources/smartcontractschema/: lib.rs  unit-test-with-schema.wasm  unit-test.wasm
concordium-sdk/src/test/testresources/wallet/: ars_infos.json  ars_infos_test.json  global.json  global_test.json  id_object.json  id_object_test.json  ip_info.json  ip_info_test.json
crypto-jni/: Cargo.toml  rustfmt.toml
crypto-jni/src/: lib.rs
ed25519-jni/: Cargo.toml
ed25519-jni/src/: lib.rs
javadoc/concordium-sdk/apidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
release/: README.md
scripts/: README.md  set_sdk_version.sh
(+3363 files in other folders)
