[package]
name = "crypto-jni"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
rand = "=0.7"
ed25519-dalek = "=1.0"
curve25519-dalek = "3.0"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
encrypted_transfers = { path = "../concordium-base/rust-src/encrypted_transfers" }
id = { path = "../concordium-base/rust-src/id" }
concordium-contracts-common = { path = "../concordium-base/concordium-contracts-common/concordium-contracts-common" }
elgamal = { path = "../concordium-base/rust-src/elgamal" }
crypto_common = { path = "../concordium-base/rust-src/crypto_common" }

[lib]
crate_type = ["cdylib"]
    
