[package]
name = "crypto-jni"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
rand = "=0.7"
ed25519-dalek = "=1.0"
curve25519-dalek = "3.0"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
concordium_base = { path = "../concordium-base/rust-src/concordium_base" }

[lib]
crate_type = ["cdylib"]
    
