[package]
name = "crypto-jni"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
rand = "=0.8"
ed25519-dalek = "=2.0"
curve25519-dalek = "4.1"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
concordium_base = { path = "../concordium-base/rust-src/concordium_base" }
wallet_library = { path = "../concordium-base/rust-src/wallet_library" }
hex = "0.4"

[lib]
crate_type = ["cdylib"]
    
